--- a/Frontend/Styles/book.css
+++ b/Frontend/Styles/book.css
@@ -7,6 +7,31 @@
   top: 0%;
   filter: blur(3px);
 } */
+
+#search{
+  width: 70%;
+  margin: auto;
+  display: flex;
+  height: 50px;
+  border: 1px solid black;
+}
+#stylist{
+width: 75%;
+font-size: 17px;
+border: 1px solid black;
+padding-left: 20px;
+border: none;
+}
+#btn{
+  width: 25%;
+  background-color: orangered;
+  color: white;
+  font-size: 20px;
+  border: none;
+}
+#btn:hover{
+  background-color:rgb(249, 107, 55);;
+}
 h1{
   text-align: center;
 }
@@ -18,55 +43,66 @@ h1{
 }
 .filter{
   width: 25%;
-  border: 1px solid rgb(218, 215, 215);
+ 
   padding: 10px;
   margin: 20px;
   height: fit-content;
+ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.filter button{
+  width: 40%;
+  padding: 7px;
+  font-size: 15px;
+
+  background-color: orangered;
+}
+.filter button:hover{
+  background-color: rgb(250, 106, 54);
 }
 .container{
-  width: 70%;
-  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+ 
   
 }
 .container>div{
-    display: flex;
+  background-color: aliceblue;
     border: 1px solid rgb(218, 215, 215);
     margin: 20px;
-    height: 250px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 .container>div>div{
-  margin: 10px;
+  margin: 5px;
   cursor: pointer;
 }
-.container>div>div:nth-child(1)
-{
-  width: 40%;
+.container>div h2{
+  color: orangered;
 }
-.container>div>div:nth-child(2)
-{
-  width: 60%;
+.container>div h3{
+  color: rgb(54, 53, 53);
 }
+.container>div h4{
+  color: rgb(54, 53, 53);
+}
+
 .container>div img{
   width: 100%;
   height: 220px;
   border-radius: 20px;
 }
-.container>div>div:nth-child(2){
-  padding: 10px;
-}
 .container>div{
-  text-align: center;
+  text-align: left;
 }
 .container button{
   padding: 8px;
-  background-color: orangered;
-  color: white;
+  background-color: white;
+  color: grey;
   font-size: 15px;
   border: none;
   border-radius: 20px;
 }
 .container button:hover{
-  background-color: rgb(243, 102, 51);
+ color: rgb(255, 68, 0);
 }
 
 @media only screen and (max-width: 850px){
