--- a/Frontend/Views/details.html
+++ b/Frontend/Views/details.html
@@ -27,9 +27,10 @@
         </div>
     </div>
 <!-- ------------------------------NAVBAR END-------------------- -->
+<br><br>
 
-
-<div class="container">
+<div id="container">
+    
 
 </div>
 
@@ -71,7 +72,50 @@
    </div> 
 <br><br>
 
-       
+<h1 class="ser">Feedback</h1>
+
+<p class="ser">Take a look at what our clients have to say about our work and
+     <br>dedication that keeps them coming back for more.</p>
+
+     <div class="client">
+        <div>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <p><i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis doloremque ratione illum soluta dicta architecto debitis, quasi quae in vel excepturi explicabo labore nulla dolorum. Mollitia incidunt temporibus molestias corporis.</i></p>
+            <div>
+                <img src="https://images.unsplash.com/photo-1623091411395-09e79fdbfcf3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aW5kaWFuJTIwZ2lybHxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80" alt="">
+                <h4>Radhika Sharma</h4>
+            </div>
+        </div>
+        <div>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+            <p><i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus cum facere veniam facilis repellendus, totam doloremque, qui aliquam saepe earum alias hic consequatur laboriosam. Eius!</i></p>
+            <div>
+                <img src="https://cdn.pixabay.com/photo/2019/08/08/17/25/cute-girl-4393454_640.jpg" alt="">
+                <h4>Archana Singh</h4>
+            </div>
+        </div>
+        <div>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis iusto dignissimos dolorum illum, sit aut deserunt modi consectetur repellat, odio maiores iure fuga enim, aspernatur esse. Quo atque eius vel id. Deleniti deserunt mollitia ad!</i></p>
+            <div>
+                <img src="https://oshiprint.in/image/cache/catalog/poster/new/mqp1198-733x1100.jpeg.webp" alt="">
+                <h4>Laxmi Kumari</h4>
+            </div>
+        </div>
+     </div>   
+     <br><br>   
 <!-- -----------------------------footer-------------------------------------- -->
 
 <div class="footer">
