--- a/Frontend/Views/book.html
+++ b/Frontend/Views/book.html
@@ -18,6 +18,7 @@
            <div id="myLinks">
                 <div><a href="../index.html">HOME</a></div>
                 <div> <a href="service.html">SERVICES</a></div>
+                <div> <a href="#">VIEW APPOINMENT</a></div>
                 <div><a href="book.html" class="book" id="book">BOOK AN APPOINMENT</a></div>
                 <div><a href="#" class="login" id="login">Login/Signup</a></div> 
         </div>
