--- a/Frontend/Styles/details.css
+++ b/Frontend/Styles/details.css
@@ -1,8 +1,10 @@
 #container{
   width: 90%;
+  height: 600px;
   margin: auto;
   display: flex;
   justify-content: space-around;
+  
 }
 #container p{
  font-size: 20px;
@@ -15,6 +17,8 @@
 }
 #container img{
   width: 100%;
+  height: 100%;
+
 }
 #container button{
   width:100%;
@@ -210,3 +214,43 @@
     border-radius: 30%;
     margin-right: 20px;
   }
+  @media only screen and (max-width: 550px){
+    .client{
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+    }
+  }
+
+
+  
+
+  .popup-form {
+    display: none;
+    position: fixed;
+    top: 58%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    padding: 20px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    z-index: 9999;
+}
+
+.popup-form input[type="date"],
+.popup-form input[type="time"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.popup-form button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
