--- a/Frontend/Views/service.html
+++ b/Frontend/Views/service.html
@@ -18,7 +18,7 @@
            <div id="myLinks">
                 <div><a href="../index.html">HOME</a></div>
                 <div> <a href="service.html">SERVICES</a></div>
-                <div> <a href="#">VIEW APPOINMENT</a></div>
+                <div> <a href="view.html">VIEW APPOINMENT</a></div>
                 <div><a href="book.html" class="book" id="book">BOOK AN APPOINMENT</a></div>
                 <div><a href="#" class="login" id="login">Login/Signup</a></div> 
         </div>
@@ -192,13 +192,13 @@
     </div>
     <div>
         <h3>Buisness Hours</h3>
-        <p>Monday - Closed</p>
-        <p>Tuesday: 11:00-09:00</p>
-        <p>Wednesday: 11:00-09:00</p>
-        <p>Thursday: 11:00-09:00</p>
-        <p>Friday: 11:00-09:00</p>
-        <p>Saturday: 11:00-09:00</p>
-        <p>Sunday: 10:00-09:00</p>
+        <p>Monday - 11:00-06:00</p>
+        <p>Tuesday: 11:00-06:00</p>
+        <p>Wednesday: 11:00-06:00</p>
+        <p>Thursday: 11:00-06:00</p>
+        <p>Friday: 11:00-06:00</p>
+        <p>Saturday: 11:00-06:00</p>
+        <p>Sunday: 10:00-06:00</p>
     </div>
  </div>        
 </body>
