--- a/Frontend/Views/view.html
+++ b/Frontend/Views/view.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
-    <link rel="stylesheet" href="../Styles/book.css">
+    <title>Salon Safari</title>
+    <link rel="stylesheet" href="../Styles/view.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -28,61 +28,13 @@
         </div>
     </div>
     <!-- ------------------------------NAVBAR END-------------------- -->
-<br><br>
-
-<h1>OUR STYLIST </h1>
-
-    <form id="search">
-        <input type="text" id="stylist" placeholder="Find your stylist">
-        <input type="submit" id="btn" placeholder="Search">
-    </form>
-
-<div class="main-container">
-    <div class="filter" id="filter">
-        <h3>Filter by</h3>
-        <hr>
-        <h4>service</h4>
-           <input type="checkbox" class="salon" value="Hair Stylist" name="salon">
-           <label for="">Hair Stylist</label>
-           <br>
-           <input type="checkbox" class="salon" value="Makeover" name="salon">
-           <label for="">Makeover</label>
-           <br>
-           <input type="checkbox" class="salon" value="Bridal Make up" name="salon">
-           <label for="">Bridal Make up</label>
-           <br>
-           <input type="checkbox" class="salon" value="Skin Treatment" name="salon">
-           <label for="">Skin Treatment</label>
-           <br>
-           <hr>
-           <h4>Star rating</h4>
-           <input type="checkbox" class="star" value="1" name="star">
-           <label for="">1 star</label>
-           <br>
-           <input type="checkbox" class="star" value="2" name="star">
-           <label for="">2 star</label>
-           <br>
-           <input type="checkbox" class="star" value="3" name="star">
-           <label for="">3 star</label>
-           <br>
-           <input type="checkbox" class="star" value="4" name="star">
-           <label for="">4 star</label>
-           <br>
-           <input type="checkbox" class="star" value="5" name="star">
-           <label for="">5 star</label>
-          
-          
-            <br>
-            <br>
-            <button id="fil">Apply</button>
-    </div>
     <div class="container">
 
     </div>
-</div>
 
-<br><br>
-       
+
+
+           
 <!-- -----------------------------footer-------------------------------------- -->
 
 <div class="footer">
@@ -123,8 +75,8 @@
         <p>Saturday: 11:00-06:00</p>
         <p>Sunday: 10:00-06:00</p>
     </div>
- </div> 
- <!-- <img id="back" src="https://media.istockphoto.com/id/1130436548/vector/vector-seamless-monochrome-pattern-for-hairdresser-tools-for-the-master-in-the-beauty-salon.jpg?s=612x612&w=0&k=20&c=ubTEK_qfKddQXvVwrJhQwl-MMCTXBGmv_7yP8a9O8J8=" alt="">        -->
+ </div>
+
 </body>
-<script src="../Scripts/book.js"> </script>
+<script src="../Scripts/view.js"></script>
 </html>
