--- a/Frontend/Views/admin.stylist.html
+++ b/Frontend/Views/admin.stylist.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <!-- info box -->
-        <h3 class="i-name">Dashboard</h3>
+        <h3 class="i-name">Stylist</h3>
         <div class="values">
      
         </div>
