--- a/Frontend/Styles/view.css
+++ b/Frontend/Styles/view.css
@@ -79,10 +79,20 @@
   .footer a:hover {
       opacity: 0.7;
   }
+  @media only screen and (max-width: 750px){
+    .container{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+    }
+  }
   @media only screen and (max-width: 550px){
     .footer{
-        display: grid;
+      display: grid;
       grid-template-columns: repeat(2,1fr);
       gap: 10px;
+      }
+      .container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
       }
   }
