--- a/Frontend/Views/admin.stylist.html
+++ b/Frontend/Views/admin.stylist.html
@@ -63,13 +63,13 @@
             <table width="100%">
                 <thead>
                     <tr>
-                        <td>A</td>
-                        <td>B</td>
-                        <td>C</td>
-                        <td>D</td>
+                        <td>Image</td>
+                        <td>Name</td>
+                        <td>Gender</td>
+                        <td>Speciality</td>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="adminStylist">
 
                 </tbody>
             </table>
