--- a/Frontend/Views/service.html
+++ b/Frontend/Views/service.html
@@ -12,7 +12,7 @@
     <!-- _____________________NAVBAR________________________ -->
     <div class="nav">
         <div class="logo">
-            <a href="../index.html"><img src="../image/logo.png" alt=""></a>
+            <a href="../index.html"><img src="../image/logo1.png" alt=""></a>
         </div>
         <div class="sec">
            <div id="myLinks">
@@ -164,7 +164,7 @@
 
 <div class="footer">
     <div>
-        <h2>SALON SAFARI</h2>
+        <h2 style="color: rgba(90, 225, 252, 0.653); font-size: 40px;">StyleSync</h2>
         <div>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
