--- a/Frontend/Views/view.html
+++ b/Frontend/Views/view.html
@@ -12,7 +12,7 @@
      <!-- _____________________NAVBAR________________________ -->
      <div class="nav">
         <div class="logo">
-            <a href="../index.html"><img src="../image/logo.png" alt=""></a>
+            <a href="../index.html"><img src="../image/logo1.png" alt=""></a>
         </div>
         <div class="sec">
            <div id="myLinks">
