--- a/Frontend/Views/view.html
+++ b/Frontend/Views/view.html
@@ -20,7 +20,7 @@
                 <div> <a href="service.html">SERVICES</a></div>
                 <div> <a href="view.html">VIEW APPOINMENT</a></div>
                 <div><a href="book.html" class="book" id="book">BOOK AN APPOINMENT</a></div>
-                <div><a href="#" class="login" id="login">Login/Signup</a></div> 
+                <div><a href="../login.html" class="login" id="login">Login/Signup</a></div> 
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
