--- a/Frontend/Views/details.html
+++ b/Frontend/Views/details.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../Styles/details.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <!-- _____________________NAVBAR________________________ -->
