--- a/Frontend/Views/admin.stylist.html
+++ b/Frontend/Views/admin.stylist.html
@@ -55,18 +55,18 @@
             </div>
         </div>
         <!-- info box -->
-        <h3 class="i-name">Stylist</h3>
+        <h3 class="i-name">OUR STYLIST</h3>
         <div class="values">
-     
+            
         </div>
         <div class="board">
             <table width="100%">
                 <thead>
                     <tr>
-                        <td>Image</td>
-                        <td>Name</td>
-                        <td>Gender</td>
-                        <td>Speciality</td>
+                        <th>Image</th>
+                        <th>Name</th>
+                        <th>Gender</th>
+                        <th>Speciality</th>
                     </tr>
                 </thead>
                 <tbody id="adminStylist">
@@ -77,5 +77,5 @@
     </section>
  
 </body>
-
+<script src="../Scripts/admin.stylist.js"></script>
 </html>
