--- a/Frontend/Styles/admin.css
+++ b/Frontend/Styles/admin.css
@@ -254,9 +254,9 @@ tr {
     border-bottom: 1px solid #a9a9a9;
 }
 
-thead td {
-    font-size: 14px;
-    font-weight: 400;
+thead th {
+    font-size: 20px;
+    font-weight: 700;
     background: #F9FBFB;
     text-align: start;
     padding: 15px;
