--- a/Frontend/Styles/admin.css
+++ b/Frontend/Styles/admin.css
@@ -213,7 +213,7 @@ body {
 }
 
 .board {
-    width: 96%;
+    
     margin: 30px 0 30px 30px;
     overflow: auto;
     background: white;
@@ -587,3 +587,66 @@ body {
         bottom: 100%;
     }
 }
+
+
+
+#page{
+    width: 95%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+form {
+    max-width: 500px;
+    margin: 0 10px;
+    border: 1px solid white;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
+  input[type="text"],
+  textarea,
+  select {
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  textarea {
+    height: 100px;
+  }
+  
+  input[type="submit"] {
+    margin-top: 10px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
+  
+  input:invalid,
+  textarea:invalid,
+  select:invalid {
+    border-color: red;
+  }
+  
+  input:valid,
+  textarea:valid,
+  select:valid {
+    border-color: #ccc;
+  }
+  
