admin dahsboard and book appointment

--- a/Frontend/Styles/admin.css
+++ b/Frontend/Styles/admin.css
@@ -398,6 +398,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     background: linear-gradient(#141e30, #243b55);
+    /* background-color: blue; */
 }
 
 .login-box {
@@ -408,6 +409,7 @@ body {
     padding: 40px;
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, .5);
+    /* background-color: red; */
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
