--- a/Frontend/Views/service.html
+++ b/Frontend/Views/service.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../Styles/navbar.css">
     <link rel="stylesheet" href="../Styles/service.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- _____________________NAVBAR________________________ -->
@@ -20,7 +23,9 @@
                 <div> <a href="service.html">SERVICES</a></div>
                 <div> <a href="view.html">VIEW APPOINMENT</a></div>
                 <div><a href="book.html" class="book" id="book">BOOK AN APPOINMENT</a></div>
-                <div><a href="../login.html" class="login" id="login">Login/Signup</a></div> 
+                <div><a href="./admin.Dashboard.html" class="book" id="adminPanel">Admin Panel</a></div>
+
+                <div><a href="../login.html" class="login" id="login" onclick="handleLoginBtn()">Login/Signup</a></div>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -203,3 +208,5 @@
  </div>        
 </body>
 </html>
+
+<script src="../Scripts/navbar.js"></script>
