--- a/Frontend/Styles/book.css
+++ b/Frontend/Styles/book.css
@@ -8,151 +8,194 @@
   filter: blur(3px);
 } */
 
-#search{
+
+#search {
   width: 70%;
   margin: auto;
   display: flex;
   height: 50px;
   border: 1px solid black;
 }
-#stylist{
-width: 75%;
-font-size: 17px;
-border: 1px solid black;
-padding-left: 20px;
-border: none;
+
+#stylist {
+  width: 75%;
+  font-size: 17px;
+  border: 1px solid black;
+  padding-left: 20px;
+  border: none;
 }
-#btn{
+
+#btn {
   width: 25%;
   background-color: orangered;
   color: white;
   font-size: 20px;
   border: none;
 }
-#btn:hover{
-  background-color:rgb(249, 107, 55);;
+
+#btn:hover {
+  background-color: rgb(249, 107, 55);
+  ;
 }
-h1{
+
+h1 {
   text-align: center;
 }
-.main-container{
+
+.main-container {
   display: flex;
   justify-content: space-around;
   padding: 30px;
-  
+
 }
-.filter{
+
+.filter {
   width: 25%;
- 
+
   padding: 10px;
   margin: 20px;
   height: fit-content;
- box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.filter button{
+
+.filter button {
   width: 40%;
   padding: 7px;
   font-size: 15px;
 
   background-color: orangered;
 }
-.filter button:hover{
+
+.filter button:hover {
   background-color: rgb(250, 106, 54);
 }
-.container{
+
+.container {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
- 
-  
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+
 }
-.container>div{
+
+.container>div {
   background-color: aliceblue;
-    border: 1px solid rgb(218, 215, 215);
-    margin: 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  border: 1px solid rgb(218, 215, 215);
+  /* margin: 20px; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
-.container>div>div{
+
+.container>div>div {
   margin: 5px;
   cursor: pointer;
 }
-.container>div h2{
+
+.container>div h2 {
   color: orangered;
 }
-.container>div h3{
-  color: rgb(54, 53, 53);
-}
-.container>div h4{
+
+.container>div h3 {
   color: rgb(54, 53, 53);
 }
 
-.container>div img{
-  width: 100%;
-  height: 220px;
-  border-radius: 20px;
+.container>div h4 {
+  color: rgb(54, 53, 53);
 }
-.container>div{
+
+.container>div>div:nth-child(1){
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+
+}
+
+.container>div img {
+  /* width: 80%; */
+  height: 220px;
+  margin: auto;
+  margin-top: 10px;
+  display: inline-block;
+  /* align-items: center; */
+  border-radius: 5px;
+}
+
+.container>div {
   text-align: left;
 }
-.container button{
-  padding: 8px;
+
+.container button {
+  padding: 8px 10px;
+  width: 80%;
+  display: block;
+  margin: auto;
   background-color: white;
+  background-color: #007bff;
   color: grey;
+  color: white;
   font-size: 15px;
   border: none;
-  border-radius: 20px;
-}
-.container button:hover{
- color: rgb(255, 68, 0);
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 850px){
-  .container{
+.container button:hover {
+  background-color: transparent;
+  color: #007bff;
+  border: 1px solid;
+  letter-spacing: 1px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 850px) {
+  .container {
     display: grid;
-  grid-template-columns: repeat(2,1fr);
-  }
-}
-@media only screen and (max-width: 500px){
-  .container{
-    display: grid;
-  grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-
-
-
-
-
-
-  /* -----------------footer----------------------------- */
-
-  .footer{
-    background: rgb(233, 230, 230);
+@media only screen and (max-width: 500px) {
+  .container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    justify-content: space-around;
-    padding: 20px;
+    grid-template-columns: repeat(1, 1fr);
   }
+}
 
-  .footer a {
-    padding: 10px;
-    font-size: 30px;
-    width: 25px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
-    background: orangered;
-    color: white;
+
+
+
+
+
+
+/* -----------------footer----------------------------- */
+
+.footer {
+  background: rgb(233, 230, 230);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.footer a {
+  padding: 10px;
+  font-size: 30px;
+  width: 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  background: orangered;
+  color: white;
+}
+
+.footer a:hover {
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 550px) {
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
-  
-  .footer a:hover {
-      opacity: 0.7;
-  }
-  @media only screen and (max-width: 550px){
-    .footer{
-        display: grid;
-      grid-template-columns: repeat(2,1fr);
-      gap: 10px;
-      }
-  }
+}
