--- a/Frontend/Styles/details.css
+++ b/Frontend/Styles/details.css
@@ -1,23 +1,31 @@
 #container{
-  width: 90%;
+  width: 80%;
   height: 600px;
   margin: auto;
   display: flex;
   justify-content: space-around;
+  text-align: justify;
   
 }
 #container p{
- font-size: 20px;
+ font-size: 18px;
+ 
 }
 #container>div:nth-child(1){
   width: 63%;
+  /* border: 1px solid red; */
+  /* margin: auto; */
+  display: flex;
+  justify-content: center;
 }
 #container>div:nth-child(2){
   width: 33%;
 }
 #container img{
-  width: 100%;
-  height: 100%;
+  /* width: 80%; */
+  margin: auto;
+  /* border: 1px solid red; */
+  height: 80%;
 
 }
 #container button{
