--- a/Frontend/Styles/view.css
+++ b/Frontend/Styles/view.css
@@ -1,98 +1,134 @@
-
-
-.container{
+.container {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
- width: 80%;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
   margin: auto;
+  gap: 20px;
 }
-.container>div{
+
+.container>div {
   background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(218, 215, 215);
-    margin: 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  /* border: 1px solid rgb(218, 215, 215); */
+  /* margin: 20px; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  border-radius: 5px;
 }
-.container>div>div{
+
+.container>div>div {
   margin: 5px;
   cursor: pointer;
 }
-.container>div h1{
+
+.container>div h1 {
   color: orangered;
 }
-.container>div h2{
+
+.container>div h2 {
   color: orange;
 }
-.container>div h3{
-  color: rgb(54, 53, 53);
-}
-.container>div h4{
+
+.container>div h3 {
   color: rgb(54, 53, 53);
 }
 
-.container>div img{
-  width: 100%;
-  height: 220px;
-  border-radius: 20px;
+.container>div h4 {
+  color: rgb(54, 53, 53);
 }
-.container>div{
+
+.container>div>div:nth-child(1){
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+
+}
+
+.container>div>div:nth-child(2){
+  /* border: 1px solid red; */
+  text-align: start;
+  padding-left: 20px;
+}
+
+.container>div img {
+  height: 220px;
+  margin: auto;
+  margin-top: 10px;
+  display: inline-block;
+  /* align-items: center; */
+  border-radius: 5px;
+}
+
+.container>div {
   text-align: left;
 }
-.container button{
-  padding: 8px;
+
+.container button {
+  padding: 8px 10px;
+  width: 60%;
+  display: block;
+  /* margin: auto; */
   background-color: red;
   color: white;
-  font-size: 17px;
+  font-size: 15px;
   border: none;
-  border-radius: 10px;
-  width: 80px;
-}
-.container button:hover{
- color: rgb(255, 68, 0);
+  border-radius: 5px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
+.container button:hover {
+  background-color: transparent;
+  color: red;
+  border: 1px solid;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
 
 
 
 
- /* -----------------footer----------------------------- */
 
- .footer{
-    background: rgb(233, 230, 230);
+/* -----------------footer----------------------------- */
+
+.footer {
+  background: rgb(233, 230, 230);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.footer a {
+  padding: 10px;
+  font-size: 30px;
+  width: 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  background: orangered;
+  color: white;
+}
+
+.footer a:hover {
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 750px) {
+  .container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    justify-content: space-around;
-    padding: 20px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
 
-  .footer a {
-    padding: 10px;
-    font-size: 30px;
-    width: 25px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
-    background: orangered;
-    color: white;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
-  
-  .footer a:hover {
-      opacity: 0.7;
-  }
-  @media only screen and (max-width: 750px){
-    .container{
-      display: grid;
-      grid-template-columns: repeat(2,1fr);
-    }
-  }
-  @media only screen and (max-width: 550px){
-    .footer{
-      display: grid;
-      grid-template-columns: repeat(2,1fr);
-      gap: 10px;
-      }
-      .container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-      }
-  }
+}
