--- a/Frontend/Views/admin.appointment.html
+++ b/Frontend/Views/admin.appointment.html
@@ -66,7 +66,7 @@
                     <tr >
                         <td>Image</td>
                         <td>Service</td>
-                        <td>Customer ID</td>
+                        <td>Name [Customer ID]</td>
                         <td>Name [Stylist ID]</td>
                         <td>Date [Time]</td>
                         <td>Status</td>
