--- a/Frontend/Views/admin.stylist.html
+++ b/Frontend/Views/admin.stylist.html
@@ -65,6 +65,7 @@
                         <th>Name</th>
                         <th>Gender</th>
                         <th>Speciality</th>
+                        <th>Remove</th>
                     </tr>
                 </thead>
                 <tbody id="adminStylist">
