--- a/Frontend/Styles/book.css
+++ b/Frontend/Styles/book.css
@@ -146,17 +146,43 @@ h1 {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 1100px) {
   .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+  .main-container {
+    display: flex;
+    justify-content: space-around;
+    padding: 30px;
+    flex-direction: column;
+  
+  }
+  .main-container > div:nth-child(1){
+    width: 80%;
+    margin: auto;
+    margin-bottom: 40px;
+    border: 1px solid red;
+  }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+  .main-container {
+    display: flex;
+    justify-content: space-around;
+    padding: 30px;
+    flex-direction: column;
+  
+  }
+  .main-container > div:nth-child(1){
+    width: 80%;
+    margin: auto;
+    margin-bottom: 40px;
+    border: 1px solid red;
   }
 }
 
