--- a/Frontend/Styles/details.css
+++ b/Frontend/Styles/details.css
@@ -143,6 +143,16 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
       }
+      #container{
+        display: flex;
+        flex-direction: column;
+      }
+      #container > div:nth-child(2){
+        border: 1px solid red;
+        background-color: white;
+        margin-bottom: 350px;
+        width: 90%;
+      }
   }
   @media only screen and (max-width: 700px){
     .see{
