--- a/Frontend/Views/details.html
+++ b/Frontend/Views/details.html
@@ -6,12 +6,12 @@
     <title>Details</title>
     <link rel="stylesheet" href="../Styles/details.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
@@ -162,7 +162,7 @@
 
 <div class="footer">
     <div>
-        <h2 style="color: rgba(0, 213, 255, 0.882); font-size: 40px;">StyleSync</h2>
+        <img width="73%" src="../image/logo1.png" alt="">
         <div>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
