--- a/Frontend/Views/service.html
+++ b/Frontend/Views/service.html
@@ -6,10 +6,11 @@
     <title>Services</title>
     <link rel="stylesheet" href="../Styles/navbar.css">
     <link rel="stylesheet" href="../Styles/service.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <!-- _____________________NAVBAR________________________ -->
@@ -169,7 +170,7 @@
 
 <div class="footer">
     <div>
-        <h2 style="color: rgba(90, 225, 252, 0.653); font-size: 40px;">StyleSync</h2>
+        <img width="73%" src="../image/logo1.png" alt="">
         <div>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
