--- a/Frontend/Views/book.html
+++ b/Frontend/Views/book.html
@@ -6,10 +6,11 @@
     <title>Book</title>
     <link rel="stylesheet" href="../Styles/book.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
      <!-- _____________________NAVBAR________________________ -->
@@ -92,7 +93,7 @@
 
 <div class="footer">
     <div>
-        <h2 style="color: rgba(0, 213, 255, 0.882); font-size: 40px;">StyleSync</h2>
+        <img width="73%" src="./image/logo1.png" alt="">
         <div>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
