--- a/Frontend/Views/view.html
+++ b/Frontend/Views/view.html
@@ -7,11 +7,11 @@
     <title>Salon Safari</title>
     <link rel="stylesheet" href="../Styles/view.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
     <div class="footer">
         <div>
-            <h2>SALON SAFARI</h2>
+            <img width="73%" src="../image/logo1.png" alt="">
             <div>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
